--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.0",
+    "react-ui-cards": "^2.0.0",
     "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.1.2"
   },
